# sendxmpp-rs

./: Cargo.toml  README.md  sendxmpp.toml
.ci/: Jenkinsfile  build.sh
src/: main.rs
