[package]
name = "sendxmpp"
version = "1.0.1"
authors = ["moparisthebest <admin@moparisthebest.com>"]

description = "Send XMPP messages from the command line."
repository  = "https://code.moparisthebest.com/moparisthebest/sendxmpp-rs"
keywords    = ["xmpp"]

license = "GPL-3.0+"
readme = "README.md"

edition = "2018"

exclude = [ ".gitignore" ]

[dependencies]
toml = "0.5"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
gumdrop = "0.8.0"
gumdrop_derive = "0.8.0"
dirs = "3.0.1"
tokio-xmpp = "3.0.0"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
xmpp-parsers = "0.18"
die = "0.2.0"
