[package]
name = "sendxmpp"
version = "3.0.1"
authors = ["moparisthebest <admin@moparisthebest.com>"]

description = "Send XMPP messages from the command line."
repository  = "https://code.moparisthebest.com/moparisthebest/sendxmpp-rs"
keywords    = ["xmpp"]

license = "AGPL-3.0-or-later"
readme = "README.md"

edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
    "*.md",
    "sendxmpp.toml",
]

[dependencies]
toml = "0.5"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
gumdrop = "0.8.0"
gumdrop_derive = "0.8.0"
dirs = "4.0.0"
tokio-xmpp = { version = "3.2.0", default-features = false, features = ["tls-rust"] }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util", "io-std"] }
xmpp-parsers = "0.19"
die = "0.2.0"
anyhow = "1.0"
env_logger = "0.9"
